Initial changes to the title and date

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-4" href="index.html">
-                        Serenidad Homes.</a></span>
+                        Peak Homes.</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -73,7 +73,7 @@
                  <div class="timeline-date-panel col-xs-12 col-md-6  align-left">         
                     <div class="time-line-date-content">
                         <p class="mbr-timeline-date mbr-fonts-style display-5">
-                            1 january 2018  
+                            17 july 2022  
                         </p>
                     </div>
                 </div>
